Add JVM options to prevent warnings with asciidoctor